<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/video_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/cancel2" />

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_video_title"
            android:layout_marginTop="8dp"
            android:background="@android:color/black" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_video_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_cancel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Video_title_label" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_share"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/no_video_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_no_video"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/no_video"
            android:contentDescription="@string/no_video_recorded_label" />

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_no_video"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:text="@string/no_video_recorded_label"
            android:textColor="@color/secondaryText"
            android:textSize="21sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/upload_video_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/pb_upload_data"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:theme="@style/ProgressBar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pb_upload_data"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/upload_video"
            android:textColor="@color/secondaryText"
            android:textSize="21sp"
            android:textStyle="bold" />
    </RelativeLayout>

</FrameLayout>